# DVRPOdGNULinux_dz2023

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile_answer(cleanedByCommand"make clean")/: Makefile  answer.txt  answer2.txt  prog  prog-a  prog-so  test01.txt  test02.txt  test20err.txt
03_Text/: 1.txt  cal.txt  randomizer.sh  randomizer1.sh  test.sh  videozapis_10-04-2023.webm
04_Debugging/: 2.gdbinit  range.c  range0.c
04_Debugging(before clean)/: 01.txt  02.txt  1.gdbinit  1.txt  2.txt  Makefile  range
05_Regexps/: esub.c
05_Regexps_backup/: Makefile  a.out  e1.txt  e11.txt  e3.txt  esub  esub.c  s2.txt
06_TracingFencing/: Makefile
06_TracingFencing(backup)/: 3.txt  err.txt  err3.txt  move  pre_remove.c  preremovetest.sh  straceInfo.txt  straceInfo1.txt  straceInfo2.txt  straceInfo3.txt  straceInfo4.txt  straceInfo5.txt  straceInfo6.txt
07_Environmental/: memo.sh  rhasher.c
07_Environmental(backup)/: 1.txt  11.txt  2.txt  22.txt  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  memoCommands.memo  rhasher
07_Environmental(backup)/.deps/: rhasher.Po
07_Environmental(backup)/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
08_I18n/: Makefile.am  config.h  config.h.in  configure~
08_I18n(backup1)/: Makefile.am  configure.ac  nM.pot  ru.po
08_I18n(backup1.5)/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  mes.pot  nM.new.pot  numMagician  numMagician.c  zh.po
08_I18n(backup1.5)/.deps/: numMagician.Po
08_I18n(backup1.5)/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
08_I18n(backup1.5)/zh/LC_MESSAGES/: nM.mo
08_I18n(backup2)/: Makefile.am  POTFILES.in  configure  configure.ac  mes.pot  numMagician  numMagician.c  zh.po
08_I18n(backup2)/autom4te.cache/: output.0  output.2  requests  traces.2
08_I18n(backup3)/: Makefile  Makefile.in  config.status  configure  configure.ac
08_I18n(backup3)/autom4te.cache/: output.1  requests  traces.2
08_I18n(backup3)/po/: POTFILES.in  ru.po
08_I18n(backup3)/src/: Makefile  Makefile.am  Makefile.in  numMagician  numMagician.c
08_I18n/autom4te.cache/: output.2  traces.0
08_I18n/po/: Makefile  Makefile.am  Makefile.in  nM.pot
09_PatchDiff/: Makefile
09_PatchDiff(backup)/: Makefile0.txt  l1  l1.c  l2  l2.c  l3  l3.c  l_seed.patch  l_size.patch  l_symb.patch  labyrint.c  labyrint_.c  labyrint_seed  labyrint_size  labyrint_symbol  labyrinth
10_Testing/: Makefile.am  configure.ac
10_Testing/src/: Makefile.am  buf.h  libbuf.c
10_Testing/tests/: Makefile.am  tests.c
11_Documenting/: Doxyfile.in  Makefile  cc2.txt  doxy2.txt  doxy_out.txt  numMagician  numMagician.1  numMagician.c
11_Documenting(backup1)/: config.h.in~  configure.ac  configure~
11_Documenting(backup1)/src/.deps/: numMagician.Po
11_Documenting(backup2)/: Makefile  numMagician  numMagician.c
11_Documenting(backup2)/po/: numMagician.pot
11_Documenting(backup2)/po/ru/: numMagician.po~
11_Documenting(backup2)/po/zh/: numMagician.po~
11_Documenting(backup2)/zh/LC_MESSAGES/: numMagician.mo
11_Documenting/doxygen/html/: Interesting.html  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  menudata.js  numMagician.html  numMagician_8c.html  numMagician_8c__incl.dot  pages.html
11_Documenting/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  defines_0.js  files_0.js  functions_0.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js
11_Documenting/doxygen/latex/: Interesting.tex  files.tex  numMagician.tex  numMagician_8c.tex  numMagician_8c.tex.tmp  numMagician_8c__incl.dot  refman.tex
11_Documenting/doxygen/man/man2/: Interesting.2  numMagician.2  numMagician.c.2
11_Documenting/po/: zh_po.txt
11_Documenting/po/ru/: numMagician.po
11_Documenting/po/zh/: numMagician.po
11_Documenting/ru/LC_MESSAGES/: numMagician.mo
12_InstallPackage/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  labyrint_mlq  labyrint_mlq.c
12_InstallPackage/.deps/: labyrint_mlq.Po
12_InstallPackage/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
13/: 2.txt
