#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([labyrint_mlq], [0.4], [kostya45e@mail.ru])
AM_INIT_AUTOMAKE([foreign])
#~ AM_INIT_AUTOMAKE(labyrint_mlq,0.4)
AC_CONFIG_SRCDIR([labyrint_mlq.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([time.h stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
